added search barfonctionalities
find a way to still get a result even if too many results (searchtitle is too short)

keep loading screen while we are fetching the images instead of showing empty cards

--- a/index.html
+++ b/index.html
@@ -300,6 +300,14 @@
   </div>
   <section id="loadingScreen" class="loadingscreen"><img src="images/3dgifmaker40241.gif" loading="lazy" alt=""></section>
   <div class="discover-movies">
+    <div class="search-container">
+      <input type="text" id="search-input" placeholder="Search for a title..." />
+      <select id="type-select">
+        <option value="movie" selected>Movie</option>
+        <option value="series">Series</option>
+      </select>
+      <button id="search-button">Search</button>
+    </div>    
     <header class="cards">
       <div id="card-grid" class="w-layout-grid card-grid">
         <div id="sample-card" class="card-style w-node-_2edc37e2-034d-8ab1-2dac-64b06b35afd6-c2b37c92">
@@ -308,8 +316,8 @@
       </div>
     </header>
     <div class="next-page-section">
-      <a id="next-page-button" href="#" class="w-button">Button Text</a>
-    </div>
+      <a id="next-page-button" href="#" class="w-button">Next Page</a>
+  </div>
   </div>
   <div class="sign-in">
     <div id="w-node-cd910be4-1012-9783-982a-4e6b783892ca-c2b37c92" class="w-layout-layout sign-in-quick-stack wf-layout-layout">
