next page and loading screen update
next page wis now show more and will show past moves plus new page

loading screen is under search bar now

--- a/index.html
+++ b/index.html
@@ -298,7 +298,6 @@
       </section>
     </div>
   </div>
-  <section id="loadingScreen" class="loadingscreen"><img src="images/3dgifmaker40241.gif" loading="lazy" alt=""></section>
   <div class="discover-movies">
     <div class="search-container">
       <input type="text" id="search-input" placeholder="Search for a title..." />
@@ -307,7 +306,8 @@
         <option value="series">Series</option>
       </select>
       <button id="search-button">Search</button>
-    </div>    
+    </div>  
+    <section id="loadingScreen" class="loadingscreen"><img src="images/3dgifmaker40241.gif" loading="lazy" alt=""></section>  
     <header class="cards">
       <div id="card-grid" class="w-layout-grid card-grid">
         <div id="sample-card" class="card-style w-node-_2edc37e2-034d-8ab1-2dac-64b06b35afd6-c2b37c92">
@@ -316,7 +316,7 @@
       </div>
     </header>
     <div class="next-page-section">
-      <a id="next-page-button" href="#" class="w-button">Next Page</a>
+      <a id="next-page-button" href="#" class="w-button">Load More</a>
   </div>
   </div>
   <div class="sign-in">
